# loupiote

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
crates/lib/: Cargo.toml
crates/lib/src/: errors.rs  renderer.rs  scene.rs
crates/lib/src/loaders/: binary.rs  mod.rs
crates/lib/src/render/: asvgf.rs
crates/standalone/: Cargo.toml  index.html
crates/standalone/src/: app.rs  camera.rs  errors.rs  input_manager.rs  lib.rs  main.rs  settings.rs
crates/standalone/src/commands/: mod.rs
crates/standalone/src/gui/: mod.rs
crates/standalone/src/gui/toolbar/: render_settings.rs
crates/standalone/src/gui/windows/: mod.rs  performance_info.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
lib/: Cargo.toml
lib/src/: device.rs  errors.rs  gltf_loader.rs  image.rs  lib.rs  renderer.rs  scene.rs
lib/src/gltf_loader/: mod.rs
lib/src/loaders/: binary.rs  gltf.rs  mod.rs
lib/src/render/: asvgf.rs  mod.rs
loupiote-js/: README.md  esbuild.mjs  index.ts  package.json
loupiote-js/example/: package.json  tsconfig.json  vite.config.ts
loupiote-js/example/src/: main.ts
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
src/: camera.rs  errors.rs  gltf_loader.rs  gui.rs  main.rs  performance.rs  renderer.rs  scene.rs
src/gui/: info_window_gui.rs  mod.rs
src/gui/views/: mod.rs
src/gui/windows/: load_file.rs  mod.rs  scene_info.rs
src/utils/: mod.rs
standalone/: Cargo.toml  index.html
standalone/src/: app.rs  async_exec.rs  camera.rs  device.rs  errors.rs  event.rs  gltf_loader.rs  input_manager.rs  lib.rs  logger.rs  main.rs  renderer.rs  scene.rs  settings.rs
standalone/src/gui/: mod.rs
standalone/src/gui/toolbar/: mod.rs  render_settings.rs
standalone/src/gui/windows/: error.rs  performance_info.rs
