[package]
name = "albedo-pathtracer"
version = "0.1.0"
authors = ["David Peicho <david.peicho@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
hotwatch = "0.4.6"
winit = { version = "0.26.1" }
enumflags2 = "0.7.1"
wgpu = "0.12.0"
glam = "0.20.2"
gltf = "0.15.2"
image = { version = "0.24.1", default-features = false, features = ["png", "hdr"] }
pollster = "0.2"
egui = { version = "0.17.0", default-features = false, features = [
  "single_threaded",
] }
egui_wgpu_backend = "0.17"
egui_winit_platform = "0.14"
rfd = "0.8.1"
albedo_backend = { path = "../albedo-engine/crates/albedo_backend", version = "0.0.1-beta.0" }
albedo_rtx = { path = "../albedo-engine/crates/albedo_rtx", version = "0.0.1-beta.0" }
