[workspace]
resolver = "2"
members = [
  "crates/standalone",
  "crates/lib",
  "crates/wasm"
]
default-members = ["crates/standalone"]

[workspace.dependencies]
image = { version = "0.24.1", default-features = false, features = ["png", "hdr"] }
glam = "0.29"
wgpu = "24.0.0"
pas = "0.3.0"

[profile.dev]
opt-level = 1
