[package]
name = "albedo_lib"
version = "0.0.1-beta.0"
authors = ["David Peicho <david.peicho@gmail.com>"]
edition = "2018"

[lib]
[target.'cfg(target_arch = "wasm32")']
crate-type = ["cdylib"]

[dependencies]
image = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
pas = { workspace = true }
albedo_backend = { git = "https://github.com/albedo-engine/albedo.git" }
albedo_bvh = { git = "https://github.com/albedo-engine/albedo.git" }
albedo_rtx = { git = "https://github.com/albedo-engine/albedo.git" }
bytemuck = "1.7.2"
futures-intrusive = "0.4"
gltf = "1.0.0"
