[package]
name = "loupiote-wasm"
version = "0.0.1-beta.0"
authors = ["David Peicho <david.peicho@gmail.com>"]
edition = "2018"
description = "WebAssembly wrapper for Loupiote's core library"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
build-stage = 1

[dependencies]
loupiote-core = { path = "../lib" }
wasm-bindgen = "0.2.100"
